# llvm-bitcode

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
llvm-bc-analyzer/: Cargo.toml
llvm-bc-analyzer/src/: analyze.rs  bitcodes.rs  llvm_bitcodes.rs  main.rs
llvm-bitcode/: Cargo.toml
llvm-bitcode/benches/: bench.rs
llvm-bitcode/src/: bitcodes.rs  context.rs  lib.rs
llvm-bitcode/src/block/: attribute.rs  attribute_group.rs  attributes.rs  constants.rs  function.rs  identification.rs  mod.rs  module.rs  operand_bundle_tags.rs  string_table.rs  symbol_table.rs  sync_scope_names.rs  types.rs
llvm-bitcode/src/ir/: attribute.rs  basic_block.rs  float.rs  function.rs  global_variable.rs  int.rs  mod.rs
llvm-bitcode/src/record/: function_declaration.rs  global_variable.rs  mod.rs  util.rs
llvm-bitcode/src/record/instruction/: alloca.rs  binop.rs  call.rs  copefromme.rs  mod.rs  store.rs  terminator.rs
llvm-bitcode/src/util/: fields.rs  mod.rs  types.rs  value.rs
llvm-bitcode/tests/: main.rs
llvm-bitstream/: Cargo.toml
llvm-bitstream/benches/: bench.rs
llvm-bitstream/src/: abbreviation.rs  bitstream.rs  cursor.rs  entry.rs  lib.rs
llvm-bitstream/tests/: main.rs
