[package]
name = "llvm-bc-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-bitstream = { path = "../llvm-bitstream", version = "*"}
thiserror = "1.0"
tracing = "0.1.37"
anyhow = "1.0.68"
num_enum = "0.6.0"
tracing-subscriber = "0.3"
smallvec = { version = "1.10.0", features = ["union", "const_generics", "const_new"]}
clap = { version = "4.2.5", features = ["derive"] }
